force-app/main/default/objects/Contact_Quote_Junction__c/Contact_Quote_Junction__c.object-meta.xml
<CustomObject>
    <label>Contact Quote Junction</label>
    <nameField>
        <displayFormat>CQJ-{000000000}</displayFormat>
        <label>Contact Quote Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Quote Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>