force-app/main/default/objects/Contact_Quote_Junction__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Contact Quote Junctions</relationshipLabel>
    <relationshipName>Contact_Quote_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>