force-app/main/default/objects/Contact_Quote_Junction__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Policy Holder</fullName>
            </value>
            <value>
                <fullName>Additional Policy Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>